traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:23: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^Snake:23: warning: enclosing method posFinale has result type Unit: return value discarded
          return true
          ^Snake:29: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^Snake:29: warning: enclosing method posFinale has result type Unit: return value discarded
          return true
          ^Snake:32: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^Snake:32: warning: enclosing method posFinale has result type Unit: return value discarded
      return false
      ^Snake:37: error: value unary_! is not a member of Unit
  while(!posFinale()){
        ^